corrected a test